fix overflow for watch list

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 .App__selected-items-container {
-  overflow: scroll;
+  overflow-y: scroll;
   position: fixed;
   display: flex;
   flex-direction: column;
